# example_gcn

./: README.md  example_dgl.ipynb  example_numpy.ipynb  pyproject.toml
